--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       </form>
     </template>
     <template id="single-tasks">
-      <li></li>
+      <li draggable="true">
+        <h2></h2>
+        <p></p>
+      </li>
     </template>
     <template id="tasks-list">
       <section class="tasks">
